2012-08-01 Pierrick Caillon <pierrick@in-cite.net>
	* Fix: search text input type was input instead of text.

2012-04-16 Emilie Sagniez <emilie@in-cite.net>
	* Version changed to 0.1.0

2012-03-29 Pierrick Caillon <pierrick@in-cite.net>
	* Feature: Added ability to cleanup text for search (both user input and records).
	* Fix: Centering map on the only found marker.

2012-03-23 Pierrick Caillon <pierrick@in-cite.net>
	* Extension creation.